--- a/create-ckt.html
+++ b/create-ckt.html
@@ -52,13 +52,13 @@
                 <select name="r_project" class="select form-control" required id="id_r_project">
                     <option value="0" selected>---------</option>
                     <option value="Casa 01">Casa 01</option>
-                    <option value="Projeto Casa 02">Projeto Casa 02</option>
+                    <option value="Projeto Casa 02">Casa 02</option>
                 </select>
             </div>
-
+<!-- 
             <select id="select1" class="select form-control"></select>
             
-            <div id="select3">xxxx</div>
+            <div id="select3">xxxx</div> -->
  
 
         </div>
