--- a/create-ckt.html
+++ b/create-ckt.html
@@ -49,17 +49,9 @@
                 Nome do Projeto<span class="asteriskField">*</span>
             </label>
             <div class="">
-                <select name="r_project" class="select form-control" required id="id_r_project">
-                    <option value="0" selected>---------</option>
-                    <option value="Casa 01">Casa 01</option>
-                    <option value="Projeto Casa 02">Casa 02</option>
+                <select name="r_project" class="select form-control" required id="select">
                 </select>
             </div>
-<!-- 
-            <select id="select1" class="select form-control"></select>
-            
-            <div id="select3">xxxx</div> -->
- 
 
         </div>
         <div id="div_id_r_local" class="form-group">
