--- a/create-project.html
+++ b/create-project.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="#">Meus Projetos</a>
+      <a class="navbar-brand" href="home.html">Meus Projetos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,7 +24,7 @@
             <!-- <section> span-->
       
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="home.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Projetos</a>
@@ -32,13 +32,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Calculadora CKT</a>
                 </li>
-
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Calculadora</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                  <a class="dropdown-item" href="/newCalc/">Dimensionamento de Cabos</a>
-              </div>
-            </li> -->
 
             <form method="GET" id="search-form">
                 <span><input class="form-control" type="search" id="search" name="search" placeholder="Localizar Circuito" value="">
