--- a/home.html
+++ b/home.html
@@ -12,15 +12,21 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
+
 <body onload="readProjDB()">
  
     <div class="container-fluid">
         <iframe src="header.html"></iframe>
     </div>
 
+    <div id="alinha-bt-create">
+        <a href="create-project.html"><button type="button" class="btn btn-secondary">Secondary</button></a>
+    </div>
+    
 <div class="row">
     <h3>Lista de Projetos</h3>
 </div>
+
 
 <div class="col-sm-5">
     <div id="ajusta-tabela-proj"></div>
@@ -36,7 +42,6 @@
     <script src="scripts.js"></script>
     <script src="db_proj.js"></script>
     <script src="db_circuit.js"></script>
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
