Updaties Fase first ended

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="alinha-bt-create">
-        <a href="create-project.html"><button type="button" class="btn btn-secondary">Secondary</button></a>
+        <a href="create-project.html"><button type="button" class="btn btn-secondary">Criar Projeto</button></a>
     </div>
     
 <div class="row">
