--- a/create-ckt.html
+++ b/create-ckt.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body load="optionCKT()">
+<body>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <a class="navbar-brand" href="#">Meus Projetos</a>
@@ -49,9 +49,12 @@
                 Nome do Projeto<span class="asteriskField">*</span>
             </label>
             <div class="">
-                <select name="r_project" class="select form-control" required id="select">
-                </select>
+                <input type="text" name="r_project" class="numberinput form-control" required id="id_r_project">
             </div>
+   <!--          <div class="">
+                <select name="r_project" class="select form-control" required id="id_r_project">
+                </select>
+            </div> -->
 
         </div>
         <div id="div_id_r_local" class="form-group">
@@ -173,5 +176,15 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script>
+        let url = window.location.href
+        let _id = url.split("?")[1]; // id=10&name=gustavo
+
+        console.log('dentro da function',_id)
+
+        document.getElementById('id_r_project').value = _id
+        
+    </script>
 
 </html>
