necessary changes made

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <body onload="readProjDB()">
  
     <div class="container-fluid">
-        <iframe src="header.html"></iframe>
+        <iframe src="pages/header.html"></iframe>
     </div>
 
     <div id="alinha-bt-create">
