--- a/home.html
+++ b/home.html
@@ -39,6 +39,7 @@
 </body>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="bootstrap.min.css"></script>
     <script src="scripts.js"></script>
     <script src="db_proj.js"></script>
     <script src="db_circuit.js"></script>
