--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -6,16 +6,14 @@
     <link rel="stylesheet" href="styles.css">
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="home.html">Meus Projetos</a>
+  <a class="navbar-brand" href="index.html" target="_blank">Meus Projetos</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto" id="alinha-nav">
-        <!-- <section> span-->
-  
             <li class="nav-item">
-                <a class="nav-link" href="home.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="create-project.html" target="_blank">Projetos</a>
@@ -23,7 +21,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Calculadora CKT</a>
             </li>
-            
         <form method="GET" id="search-form">
             <span><input class="form-control" type="search" id="search" name="search" placeholder="Localizar Circuito" value="">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-btn" onclick="funcao_alerta()" value="Exibir Alert">Pesquisar</button></span>
