--- a/create-ckt.html
+++ b/create-ckt.html
@@ -13,33 +13,9 @@
 
 </head>
 <body>
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="#">Meus Projetos</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto" id="alinha-nav">
-            <!-- <section> span-->
-      
-                <li class="nav-item">
-                    <a class="nav-link" href="home.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Projetos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Calculadora CKT</a>
-                </li>
-
-            <form method="GET" id="search-form">
-                <span><input class="form-control" type="search" id="search" name="search" placeholder="Localizar Circuito" value="">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-btn" onclick="funcao_alerta()" value="Exibir Alert">Pesquisar</button></span>
-            </form>
-        </ul>
-      </div>
-</nav>
+    <div class="container-fluid">
+        <iframe src="header.html"></iframe>
+    </div>
 <!-- Create Circtuit-->
 <div class="offset-1 col-10 list-div">
     <h3>Adicione um Novo Circuito</h3>
@@ -81,10 +57,11 @@
             <div class="">
                 <select name="r_type_circuit" class="select form-control" required id="id_r_type_circuit">
                     <option value="0" selected>---------</option>
-                    <option value="Luminária">Iluminação</option>
+                    <option value="Iluminação">Iluminação</option>
                     <option value="TUG's">TUG's</option>
                     <option value="Chuveiro">Chuveiro</option>
                     <option value="Ar Condicionado">Ar Condicionado</option>
+                    <option value="Outros">Outros</option>
                 </select>
             </div>
         </div>
@@ -156,11 +133,9 @@
 </div>
 <br>
 
-    <footer>
-        <p>Projeto Dimensionameto de Circuitos</p>  
-    </footer>
-
-  </div>
+    <div class="container-fluid">
+        <iframe src="footer.html"></iframe>
+    </div>
 
 </body>
 
