--- a/lista-circuitos.html
+++ b/lista-circuitos.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,21 +12,30 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body>
-  
-    <footer>
-        <p>Projeto Dimensionameto de Circuitos</p>  
-    </footer>
+<body onload="readDB()">
+    
+    <div class="container-fluid">
+        <iframe src="header.html"></iframe>
+    </div>
 
-  </div>
+<div class="row">
+    <h3>Tabela de Circuitos - (XXX)</h3>
+    
+        <div id="ajusta-tabela"></div>
+
+</div>
+<br>
+<div class="container-fluid">
+    <iframe src="footer.html"></iframe>
+</div>
+
+</body>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
-
+    <script src="scripts.js"></script>
+    <script src="db_circuit.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-</body>
 </html>
